Added zenodo citation to critic blog post

--- a/_posts/2024-01-12-critic.markdown
+++ b/_posts/2024-01-12-critic.markdown
@@ -376,3 +376,8 @@ lems with language models. ArXiv, abs/2206.14858, 2022. URL
 https://api.semanticscholar.org/CorpusID:250144408.</p>
   </li>
 </ol>
+
+
+
+<a href="https://doi.org/10.5281/zenodo.10794598"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.10794598.svg" alt="DOI"></a>
+
